# usd-uri-resolver

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md
URIResolver/: CMakeLists.txt  README.md  debugCodes.cpp  debugCodes.h  debug_codes.cpp  debug_codes.h  memory_asset.cpp  memory_asset.h  plugInfo.json  plugInfo.json.in  resolver.cpp  resolver.h  sql.cpp  sql.h
URIResolver/obfuscate_pass/: CMakeLists.txt  main.cpp
cmake/: FindMySQL.cmake  FindOpenEXR.cmake  FindUSD.cmake
databaseResolver/: CMakeLists.txt  plugInfo.json  resolver.cpp  resolver.h
stressTest/: CMakeLists.txt  main.cxx
uberResolver/: CMakeLists.txt  README.md  plugInfo.json  resolver.cpp  resolver.h  sql.cpp  sql.h  uber_resolver.md
uberResolver/obfuscate_pass/: CMakeLists.txt
usdDatabase/: CMakeLists.txt  fileFormat.cpp  fileFormat.h  plugInfo.json
usdrender/: usdrender.py
